classDiagram
    %% 共享前置（T0-1 / T0-3）
    class GlobalControls {
        +HomeButton
        +FloatingToolbar(mode: ToolbarMode)
        +SubPageShell(showHome, child)
    }
    class PageHeader {
        +String icon
        +String title
        +String subtitle
        +VoidCallback? onBack
        +build()  %% ‹返回 + 图标 + 标题 flex-1；无悬浮钮
    }
    class AppearanceSheet {
        +build()  %% 主题模式 / 界面风格(玻璃置灰) / 字号 / 光效 / 音效 / 试听 / 完成
    }
    class ThemeState {
        +AppThemeMode themeMode
        +AppStyle style
        +double fontScale
        +bool effectOn
        +bool soundOn
        +setEffectOn(v) setSoundOn(v) setStyle(v)
    }
    AppearanceSheet ..> ThemeState : watch

    %% D-B 用户管理（T-P1-04）
    class AppUser {
        +String id
        +String name
        +String role   %% 'admin' | 'member'
        +String joinedDate
        +bool isSelf
    }
    class UsersState {
        +List~AppUser~ users
        +bool currentUserIsAdmin   %% 新增 getter（依赖 AuthState.role）
        +load() add() remove()
        +cycleRole(u)   %% admin<->member 本地真实切换
        +resetPassword(u)
    }
    class AuthState {
        +String? username
        +bool authed
        +String? role   %% 新增：当前用户角色(admin|user)，来自后端
    }
    UsersState ..> AppUser : 管理
    UsersState ..> AuthState : 读 currentUserIsAdmin

    GlobalControls <|-- SubPageShell
    PageHeader --o SubPageShell : 子页头部
